--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div id="app"></div>
-
+    
+    <script src="https://unpkg.com/lodash/lodash.min.js"></script>
     <script src="./main.js"></script>
 </body>
 
